updated registration and login

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -2,13 +2,21 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>login form</title>
+<title>Login form</title>
 </head>
 <body>
-	<form method="post" action="Login">
-		User ID:  <input type="text" name="user" /><br /> 
-		Password: <input type="text" name="pass" /><br /> 
-		<input type="submit" value="Login" />
+	<h4>Login</h4>
+	<form method="post" action="login">
+		Email ID:<input type="text" name="email" /><br /> Password:<input
+			type="text" name="pass" /><br /> <input type="submit" value="Login" />
+	</form>
+	</form>
+	<br />
+	<h4>Registration</h4>
+	<form method="post" action="register">
+		User ID:<input type="text" name="email" /><br /> Password:<input
+			type="text" name="pass" /><br /> <input type="submit"
+			value="Register" />
 	</form>
 </body>
 </html>
