updated registration and login

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -6,16 +6,17 @@
 </head>
 <body>
 	<h4>Login</h4>
-	<form method="post" action="login">
-		Email ID:<input type="text" name="email" /><br /> Password:<input
-			type="text" name="pass" /><br /> <input type="submit" value="Login" />
+	<form action="loginServlet1" method="post">
+		User ID:<input type="text" name="USERNAME" /><br />
+		<br /> Password:<input type="password" name="PASSWORD" /><br />
+		<br /> <input type="submit" value="login" />
+
 	</form>
-	</form>
-	<br />
+	<br>
 	<h4>Registration</h4>
-	<form method="post" action="register">
-		User ID:<input type="text" name="email" /><br /> Password:<input
-			type="text" name="pass" /><br /> <input type="submit"
+	<form method="post" action="Register">
+		User ID:<input type="text" name="USERNAME" /><br /> Password:<input
+			type="text" name="PASSWORD" /><br /> <input type="submit"
 			value="Register" />
 	</form>
 </body>
