--- a/WebContent/HuffmanCoddingDisplay.html
+++ b/WebContent/HuffmanCoddingDisplay.html
@@ -89,28 +89,31 @@ legend {
 		<div>
 			<fieldset>
 				<legend>Compression Ratio</legend>
-				<label class="compression-label">Ciphered Text:</label> <input
-					type="text" name="cipheredText" value="Ciphered Text" /><br>
-				<br> <label class="compression-label">Size Clear Text:</label>
-				<input type="text" name="sizeClearText" value="sizeClearText" /><br>
-				<br> <label class="compression-label">Compression
-					Ratio:</label> <input type="text" name="compressionRatio"
-					value="compressionRatio" /><br>
+				<label class="compression-label">Ciphered Text:</label> 
+				<input type="text" name="cipheredText" value="Ciphered Text" />
+				<br>
+				<br> 
+				<label class="compression-label">Size Clear Text:</label>
+				<input type="text" name="sizeClearText" value="sizeClearText" />
+				<br>
+				<br> 
+				<label class="compression-label">Compression Ratio:</label> 
+				<input type="text" name="compressionRatio" value="compressionRatio" />
+				<br>
 				<br>
 			</fieldset>
 		</div>
-
 	</div>
 	<div style="float: clear"></div>
 	<div>
-		<textarea name="ciphered-text" rows="30">Lorem ipsum dolor sit amet, graeci repudiandae et nec. Munere consulatu an duo, sed ex atomorum aliquando. Habemus volutpat vix ex, qui ipsum reprehendunt ad, cu solet necessitatibus conclusionemque eos. Ei iuvaret consequat mea, mei graeco nonumes ei.
-
-Eos recusabo salutatus philosophia no, vim no amet altera. Eum eu quaerendum intellegebat, vim ei equidem nonumes, eum odio ullum no. Vis an natum iuvaret assueverit, apeirian imperdiet in his, tacimates patrioque sit ad. Eu sit ridens eirmod eligendi.</textarea>
+		<textarea name="ciphered-text" rows="30">
+		
+		</textarea>
 	</div>
 	<div>
-		<textarea name="ciphered-text" rows="30">Lorem ipsum dolor sit amet, graeci repudiandae et nec. Munere consulatu an duo, sed ex atomorum aliquando. Habemus volutpat vix ex, qui ipsum reprehendunt ad, cu solet necessitatibus conclusionemque eos. Ei iuvaret consequat mea, mei graeco nonumes ei.
-
-Eos recusabo salutatus philosophia no, vim no amet altera. Eum eu quaerendum intellegebat, vim ei equidem nonumes, eum odio ullum no. Vis an natum iuvaret assueverit, apeirian imperdiet in his, tacimates patrioque sit ad. Eu sit ridens eirmod eligendi.</textarea>
+		<textarea name="ciphered-text" rows="30">
+		
+		</textarea>
 	</div>
 
 </body>
