--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -97,7 +97,7 @@ legend {
 		</div>
 		<!--Login-->
 		<div style="text-align: center; margin-top: 25px;">
-			<form action="loginServlet1" name="login" action="post">
+			<form action="login" name="login" action="post">
 				<label class="compression-label">Name: </label>
 				<input type="text" name="USERNAME" value="Name" />
 				<br><br> 
@@ -109,7 +109,7 @@ legend {
 		</div>
 		<!--Register-->
 		<div style="text-align: center; margin-top: 25px;">
-			<form action="Register" name="login" action="post">
+			<form action="register" name="login" action="post">
 				<label class="compression-label">Name: </label>
 				<input type="text" name="USERNAME" value="Name" /><br>
 				<br> 
