working login and registration

--- a/WebContent/HuffmanCoddingDisplay.html
+++ b/WebContent/HuffmanCoddingDisplay.html
@@ -54,10 +54,7 @@ legend {
  			<form method="POST" action="upload" class="inline-form" enctype="multipart/form-data" >
  				Select the file you would like to run: 
  				<input type="file" name="file" id="file" />
-				<input type="submit" value="Submit" name="upload" id="upload" />
-			</form>
-			<form action="encrypt" method="GET" class="inline-form">
-				<input type="submit" name="encrypt" value="Encrypt" />
+				<input type="submit" value="Encrypt" name="upload" id="upload" />
 			</form>
 			<form action="decrypt" method="GET" class="inline-form">
 				<input type="submit" name="decrypt" value="Decrypt" />
