--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -46,14 +46,14 @@
 				<!-- ACTION is the servlet mapping -->
 				<form action="upload" method="GET" class="inline-form" >
 					Select the file you would like to run: 
-					<input type="file" name="uploadFile" /> 
-					<input type="submit" name="submitFile" value="Encrypt" />
+					<input type="file" name="uploadFile" disabled/> 
+					<input type="submit" name="submitFile" value="Encrypt" disabled/>
 				</form>
 				<form action="decrypt" method="GET" class="inline-form">
-					<input type="submit" name="decrypt" value="Decrypt" />
+					<input type="submit" name="decrypt" value="Decrypt" disabled/>
 				</form>
 				<form action="exit" method="GET" class="inline-form">
-					<input type="submit" name="exit" value="Exit" />
+					<input type="submit" name="exit" value="Exit" disabled/>
 				</form>
 			</span>
 		</div>
@@ -74,19 +74,23 @@
 			<div
 				style="margin-right: auto; margin-left: auto; width: 35%; margin-top: 50px;">
 				<form action=""></form>
-				<input type="submit" name="displayArray" value="Display Arrays">
+				<input type="submit" name="displayArray" value="Display Arrays" disabled>
 			</div>
 			<!--compression ratio fieldset-->
 			<div>
 				<fieldset>
 					<legend>Compression Ratio</legend>
-					<label class="compression-label">Ciphered Text:</label> <input
-						type="text" name="cipheredText" value="Ciphered Text" /><br>
-					<br> <label class="compression-label">Size Clear Text:</label>
-					<input type="text" name="sizeClearText" value="sizeClearText" /><br>
-					<br> <label class="compression-label">Compression
-						Ratio:</label> <input type="text" name="compressionRatio"
-						value="compressionRatio" /><br>
+					<label class="compression-label">Ciphered Text:</label> 
+					<input type="text" name="cipheredText" value="Ciphered Text" disabled/>
+					<br>
+					<br> 
+					<label class="compression-label">Size Clear Text:</label>
+					<input type="text" name="sizeClearText" value="sizeClearText" disabled/>
+					<br>
+					<br> 
+					<label class="compression-label">Compression Ratio:</label> 
+					<input type="text" name="compressionRatio" value="compressionRatio" disabled/>
+					<br>
 					<br>
 				</fieldset>
 			</div>
@@ -94,11 +98,11 @@
 			<div style="text-align: center; margin-top: 25px;">
 				<form action="login" name="login" action="post">
 					<label class="compression-label">Name: </label>
-					<input type="text" name="USERNAME" value="Name" />
+					<input type="text" name="USERNAME" />
 					<br>
 					<br> 
 					<label class="compression-label">Password: </label>
-					<input type="password" name="PASSWORD" value="password" />
+					<input type="password" name="PASSWORD" />
 					<br>
 					<br> 
 					<input type="submit" value="login" />
@@ -108,11 +112,11 @@
 			<div style="text-align: center; margin-top: 25px;">
 				<form action="register" name="register" action="post">
 					<label class="compression-label">Name: </label>
-					<input type="text" name="USERNAME" value="Name" />
+					<input type="text" name="USERNAME" />
 					<br>
 					<br> 
 					<label class="compression-label">Password: </label>
-					<input type="password" name="PASSWORD" value="password" />
+					<input type="password" name="PASSWORD" />
 					<br>
 					<br> 
 					<input type="submit" value="New user, Please Register" />
